fix: Center horizontally the image on small screen. Use auto for popover placement. Add non breakable space and space for some field to break on small screen. Fix the point of the markers. Issue #16

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -46,3 +46,7 @@ h3 {
   left: 720px;
   background-color: #F9F9F9;
 }
+
+.popover {
+  width: 100%;
+}
